--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,14 @@
 .name{
   color: #0F7292;
 }
+
+.young{
+  border:4px dashed grey ;
+  background-color: white;
+  padding:2px;
+  margin: 5px;
+}
+
+.young:hover{
+  filter:drop-shadow(8px 8px 10px gray);
+}
