changd bg colors

--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,18 @@
 .back{
   color: #ff5e17;
 }
+.backcolor1 {
+  background-color: #ffbf00;
+}
+
+.backcolor2{
+  background-color: #e83f6f;
+}
+
+.backcolor3{
+  background-color: #32936f;
+}
+
+.text{
+  color: white;
+}
